[gd_scene format=4 uid="uid://b04kcj0n38tg8"]

[ext_resource type="Script" uid="uid://4rr330ag2xqm" path="res://room/room.gd" id="1_0i02g"]
[ext_resource type="Texture2D" uid="uid://ejaq70p7x065" path="res://assets/images/room/tiles.png" id="1_ppkfq"]
[ext_resource type="Texture2D" uid="uid://plltg4h3qn5i" path="res://assets/images/room/window/window.png" id="2_et4wo"]
[ext_resource type="Texture2D" uid="uid://bw588upmmjvny" path="res://assets/images/room/tablet.png" id="3_cy34l"]
[ext_resource type="Texture2D" uid="uid://bthw1h6d5c6ut" path="res://assets/images/room/armchair.png" id="4_lbx1e"]
[ext_resource type="Texture2D" uid="uid://bd880gs7r3h0g" path="res://assets/images/room/laptop.png" id="5_0i02g"]
[ext_resource type="Texture2D" uid="uid://dpvl3hpo7a02w" path="res://assets/images/room/bed/bed.png" id="6_wid0f"]
[ext_resource type="Texture2D" uid="uid://ckbm2eg8t3qci" path="res://assets/images/room/bed/bed-top.png" id="7_158eg"]
[ext_resource type="PackedScene" uid="uid://bv6nhpdfkd6gu" path="res://room/player.tscn" id="9_t7mnq"]
[ext_resource type="PackedScene" uid="uid://4jxkelyxt1ni" path="res://ui/pause.tscn" id="11_t7mnq"]
[ext_resource type="FontFile" uid="uid://cn0sfewu16dwl" path="res://assets/fonts/NotoSerif-Black.ttf" id="11_wid0f"]
[ext_resource type="Texture2D" uid="uid://ce33v13jk0cke" path="res://assets/images/ui/button/button-normal.png" id="12_ltqu5"]
[ext_resource type="Texture2D" uid="uid://bykljhm8s40v7" path="res://assets/images/ui/button/button-activated.png" id="13_ew6p8"]
[ext_resource type="PackedScene" uid="uid://b1cbk4yfqjkkh" path="res://room/room_sounds.tscn" id="14_acpa7"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_j33j0"]
texture = ExtResource("1_ppkfq")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0

[sub_resource type="TileSet" id="TileSet_fsy70"]
tile_size = Vector2i(32, 32)
sources/2 = SubResource("TileSetAtlasSource_j33j0")

[sub_resource type="SegmentShape2D" id="SegmentShape2D_lbx1e"]
a = Vector2(0, -243)
b = Vector2(-3.0517578e-05, 239.00002)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_0i02g"]
a = Vector2(-242, 1)
b = Vector2(-241, 309)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_wid0f"]
a = Vector2(-242, 309)
b = Vector2(238, 309)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_158eg"]
a = Vector2(239, -1)
b = Vector2(239, 309)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cy34l"]
size = Vector2(80, 32)

[sub_resource type="Gradient" id="Gradient_cy34l"]
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_lbx1e"]
gradient = SubResource("Gradient_cy34l")
width = 600
height = 1000
use_hdr = true
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.5, 0)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0i02g"]
size = Vector2(32, 63)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_cy34l"]
closed = false
polygon = PackedVector2Array(-74, -50, -27, -50, -27, -80, 29, -80, 29, -50, 74, -50, 74, -14, 71, -10, 71, 45, 40, 45, 40, -4, -39, -4, -39, 44, -72, 44, -72, -11, -75, -13, -75, -50)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_acpa7"]
size = Vector2(98.46153, 19.23079)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_0i02g"]
closed = false
polygon = PackedVector2Array(63, -93, 63, 92, -64, 91)

[node name="Room" type="Node2D" unique_id=1778133711]
script = ExtResource("1_0i02g")

[node name="TileMapLayer" type="TileMapLayer" parent="." unique_id=1310666093]
tile_map_data = PackedByteArray("AAAAAAEAAgABAAEAAGABAAEAAgAAAAEAAAACAAEAAgAAAAEAAAADAAEAAgAAAAEAAAAEAAEAAgAAAAEAAAAFAAEAAgAAAAEAAAAGAAEAAgAAAAEAAAAHAAEAAgAAAAEAAAAIAAEAAgAAAAEAAAAJAAEAAgAAAAEAAAAKAAEAAgAAAAEAAAALAAEAAgAAAAEAAAAMAAEAAgAAAAEAAAANAAEAAgAAAAEAAAAOAAEAAgABAAEAAFAOAAIAAgABAAEAAFANAAIAAgAAAAEAAAAMAAIAAgAAAAEAAAALAAIAAgAAAAEAAAAKAAIAAgAAAAEAAAAJAAIAAgAAAAEAAAAIAAIAAgAAAAEAAAAHAAIAAgAAAAEAAAAGAAIAAgAAAAEAAAAFAAIAAgAAAAEAAAAEAAIAAgAAAAEAAAADAAIAAgAAAAEAAAACAAIAAgAAAAEAAAABAAIAAgAAAAEAAAAAAAIAAgABAAEAAGAAAAMAAgABAAEAAGABAAMAAgAAAAEAAAACAAMAAgAAAAEAAAADAAMAAgAAAAEAAAAEAAMAAgAAAAEAAAAFAAMAAgAAAAEAAAAGAAMAAgAAAAEAAAAHAAMAAgAAAAEAAAAIAAMAAgAAAAEAAAAJAAMAAgAAAAEAAAAKAAMAAgAAAAEAAAALAAMAAgAAAAEAAAAMAAMAAgAAAAEAAAANAAMAAgAAAAEAAAAOAAMAAgABAAEAAFAOAAQAAgABAAEAAFANAAQAAgAAAAEAAAAMAAQAAgAAAAEAAAALAAQAAgAAAAEAAAAKAAQAAgAAAAEAAAAIAAQAAgAAAAEAAAAHAAQAAgAAAAEAAAAGAAQAAgAAAAEAAAAFAAQAAgAAAAEAAAAEAAQAAgAAAAEAAAADAAQAAgAAAAEAAAACAAQAAgAAAAEAAAABAAQAAgAAAAEAAAAAAAQAAgABAAEAAGAJAAQAAgAAAAEAAAAMAAUAAgAAAAEAAAANAAUAAgAAAAEAAAAOAAUAAgABAAEAAFALAAUAAgAAAAEAAAAKAAUAAgAAAAEAAAAJAAUAAgAAAAEAAAAIAAUAAgAAAAEAAAAHAAUAAgAAAAEAAAAGAAUAAgAAAAEAAAAFAAUAAgAAAAEAAAAEAAUAAgAAAAEAAAADAAUAAgAAAAEAAAACAAUAAgAAAAEAAAABAAUAAgAAAAEAAAAAAAUAAgABAAEAAGAAAAYAAgABAAEAAGAAAAcAAgABAAEAAGABAAcAAgAAAAEAAAABAAYAAgAAAAEAAAACAAYAAgAAAAEAAAADAAYAAgAAAAEAAAAEAAYAAgAAAAEAAAAFAAYAAgAAAAEAAAAGAAYAAgAAAAEAAAAHAAYAAgAAAAEAAAAIAAYAAgAAAAEAAAAJAAYAAgAAAAEAAAAKAAYAAgAAAAEAAAALAAYAAgAAAAEAAAAMAAYAAgAAAAEAAAANAAYAAgAAAAEAAAAOAAYAAgABAAEAAFAOAAcAAgABAAEAAFANAAcAAgAAAAEAAAAMAAcAAgAAAAEAAAALAAcAAgAAAAEAAAAKAAcAAgAAAAEAAAAJAAcAAgAAAAEAAAAIAAcAAgAAAAEAAAAHAAcAAgAAAAEAAAAGAAcAAgAAAAEAAAAFAAcAAgAAAAEAAAAEAAcAAgAAAAEAAAADAAcAAgAAAAEAAAACAAcAAgAAAAEAAAAAAAgAAgABAAEAAGABAAgAAgAAAAEAAAACAAgAAgAAAAEAAAADAAgAAgAAAAEAAAAEAAgAAgAAAAEAAAAFAAgAAgAAAAEAAAAGAAgAAgAAAAEAAAAHAAgAAgAAAAEAAAAIAAgAAgAAAAEAAAAJAAgAAgAAAAEAAAAKAAgAAgAAAAEAAAALAAgAAgAAAAEAAAAMAAgAAgAAAAEAAAANAAgAAgAAAAEAAAAOAAgAAgABAAEAAFAOAAkAAgACAAEAAFANAAkAAgABAAEAACAMAAkAAgABAAEAACALAAkAAgABAAEAACAKAAkAAgABAAEAACAJAAkAAgABAAEAACAIAAkAAgABAAEAACAHAAkAAgABAAEAACAGAAkAAgABAAEAACAFAAkAAgABAAEAACAEAAkAAgABAAEAACADAAkAAgABAAEAACACAAkAAgABAAEAACABAAkAAgABAAEAACABAAoAAgABAAAAAAAAAAoAAgACAAAAABAAAAkAAgABAAEAAGACAAoAAgABAAAAAAADAAoAAgABAAAAAAAEAAoAAgABAAAAAAAFAAoAAgABAAAAAAAGAAoAAgABAAAAAAAHAAoAAgABAAAAAAAIAAoAAgABAAAAAAAJAAoAAgABAAAAAAAKAAoAAgABAAAAAAALAAoAAgABAAAAAAAMAAoAAgABAAAAAAANAAoAAgABAAAAAAAOAAoAAgACAAAAAAAOAAsAAgABAAAAAHANAAsAAgAAAAAAAAAMAAsAAgAAAAAAAAALAAsAAgAAAAAAAAAKAAsAAgAAAAAAAAAJAAsAAgAAAAAAAAAIAAsAAgAAAAAAAAAHAAsAAgAAAAAAAAAGAAsAAgAAAAAAAAAFAAsAAgAAAAAAAAAEAAsAAgAAAAAAAAADAAsAAgAAAAAAAAACAAsAAgAAAAAAAAABAAsAAgAAAAAAAAAAAAsAAgABAAAAAEAAAAAAAgACAAEAABABAAAAAgABAAEAAAACAAAAAgABAAEAAAADAAAAAgABAAEAAAAEAAAAAgABAAEAAAAFAAAAAgABAAEAAAAGAAAAAgABAAEAAAAHAAAAAgABAAEAAAAIAAAAAgABAAEAAAAJAAAAAgABAAEAAAAKAAAAAgABAAEAAAALAAAAAgABAAEAAAAMAAAAAgABAAEAAAANAAAAAgABAAEAAAAOAAAAAgACAAEAAAAAAAwAAgABAAAAAEABAAwAAgAAAAAAAAACAAwAAgAAAAAAAAACAA0AAgAAAAAAAAADAA0AAgAAAAAAAAAEAA0AAgAAAAAAAAAFAA0AAgAAAAAAAAAGAA0AAgAAAAAAAAAHAA0AAgAAAAAAAAAIAA0AAgAAAAAAAAAJAA0AAgAAAAAAAAAKAA0AAgAAAAAAAAALAA0AAgAAAAAAAAAMAA0AAgAAAAAAAAANAA0AAgAAAAAAAAAOAA0AAgABAAAAAHACAA4AAgAAAAAAAAACAA8AAgAAAAAAAAACABAAAgAAAAAAAAACABEAAgAAAAAAAAADAAwAAgAAAAAAAAADAA4AAgAAAAAAAAADAA8AAgAAAAAAAAADABAAAgAAAAAAAAADABEAAgAAAAAAAAAEAAwAAgAAAAAAAAAEAA4AAgAAAAAAAAAEAA8AAgAAAAAAAAAEABAAAgAAAAAAAAAEABEAAgAAAAAAAAAFAAwAAgAAAAAAAAAFAA4AAgAAAAAAAAAFAA8AAgAAAAAAAAAFABAAAgAAAAAAAAAFABEAAgAAAAAAAAAGAAwAAgAAAAAAAAAGAA4AAgAAAAAAAAAGAA8AAgAAAAAAAAAGABAAAgAAAAAAAAAGABEAAgAAAAAAAAAHAAwAAgAAAAAAAAAHAA4AAgAAAAAAAAAHAA8AAgAAAAAAAAAHABAAAgAAAAAAAAAHABEAAgAAAAAAAAAIAAwAAgAAAAAAAAAIAA4AAgAAAAAAAAAIAA8AAgAAAAAAAAAIABAAAgAAAAAAAAAIABEAAgAAAAAAAAAJAAwAAgAAAAAAAAAJAA4AAgAAAAAAAAAJAA8AAgAAAAAAAAAJABAAAgAAAAAAAAAJABEAAgAAAAAAAAAKAAwAAgAAAAAAAAAKAA4AAgAAAAAAAAAKAA8AAgAAAAAAAAAKABAAAgAAAAAAAAAKABEAAgAAAAAAAAALAAwAAgAAAAAAAAALAA4AAgAAAAAAAAALAA8AAgAAAAAAAAALABAAAgAAAAAAAAALABEAAgAAAAAAAAAMAAwAAgAAAAAAAAAMAA4AAgAAAAAAAAAMAA8AAgAAAAAAAAAMABAAAgAAAAAAAAAMABEAAgAAAAAAAAANAAwAAgAAAAAAAAANAA4AAgAAAAAAAAANAA8AAgAAAAAAAAANABAAAgAAAAAAAAANABEAAgAAAAAAAAAOAAwAAgABAAAAAHAOAA4AAgABAAAAAHAOAA8AAgABAAAAAHAOABAAAgABAAAAAHAOABEAAgABAAAAAHAAAA0AAgABAAAAAEAAAA4AAgABAAAAAEAAAA8AAgABAAAAAEAAABAAAgABAAAAAEAAABEAAgABAAAAAEAAABIAAgABAAAAAEAAABMAAgACAAAAADABAA0AAgAAAAAAAAABAA4AAgAAAAAAAAABAA8AAgAAAAAAAAABABAAAgAAAAAAAAABABEAAgAAAAAAAAABABIAAgAAAAAAAAABABMAAgABAAAAACACABIAAgAAAAAAAAACABMAAgABAAAAACADABIAAgAAAAAAAAADABMAAgABAAAAACAEABIAAgAAAAAAAAAEABMAAgABAAAAACAFABIAAgAAAAAAAAAFABMAAgABAAAAACAGABIAAgAAAAAAAAAGABMAAgABAAAAACAHABIAAgAAAAAAAAAHABMAAgABAAAAACAIABIAAgAAAAAAAAAIABMAAgABAAAAACAJABIAAgAAAAAAAAAJABMAAgABAAAAACAKABIAAgAAAAAAAAAKABMAAgABAAAAACALABIAAgAAAAAAAAALABMAAgABAAAAACAMABIAAgAAAAAAAAAMABMAAgABAAAAACANABIAAgAAAAAAAAANABMAAgABAAAAACAOABIAAgABAAAAAHAOABMAAgACAAAAACA=")
tile_set = SubResource("TileSet_fsy70")

[node name="CanvasModulate" type="CanvasModulate" parent="." unique_id=1880292137]
visible = false
color = Color(0.18359044, 0.18359044, 0.18359044, 1)

[node name="Corner" type="StaticBody2D" parent="." unique_id=1974273799]
position = Vector2(242, 332)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Corner" unique_id=1633652432]
rotation = -1.5707964
shape = SubResource("SegmentShape2D_lbx1e")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Corner" unique_id=358550626]
shape = SubResource("SegmentShape2D_0i02g")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Corner" unique_id=1840425336]
shape = SubResource("SegmentShape2D_wid0f")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Corner" unique_id=2131342714]
shape = SubResource("SegmentShape2D_158eg")

[node name="Armchair" type="StaticBody2D" parent="." unique_id=438896378]
position = Vector2(81, 372)

[node name="Sprite" type="Sprite2D" parent="Armchair" unique_id=1921719794]
texture = ExtResource("4_lbx1e")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Armchair" unique_id=166674106]
position = Vector2(0, 44)
shape = SubResource("RectangleShape2D_cy34l")

[node name="Window" type="Sprite2D" parent="." unique_id=256769685]
position = Vector2(234, 152)
texture = ExtResource("2_et4wo")

[node name="PointLight2D" type="PointLight2D" parent="Window" unique_id=887707551]
energy = 0.18
shadow_enabled = true
texture = SubResource("GradientTexture2D_lbx1e")

[node name="Table" type="StaticBody2D" parent="." unique_id=125611574]
position = Vector2(82, 313)

[node name="Sprite" type="Sprite2D" parent="Table" unique_id=208692221]
light_mask = 2
texture = ExtResource("3_cy34l")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Table" unique_id=1215237123]
position = Vector2(-56, 18.5)
shape = SubResource("RectangleShape2D_0i02g")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Table" unique_id=1490237045]
position = Vector2(56, 19)
shape = SubResource("RectangleShape2D_0i02g")

[node name="LightOccluder2D" type="LightOccluder2D" parent="Table" unique_id=2062826003]
occluder = SubResource("OccluderPolygon2D_cy34l")

[node name="Laptop" type="Sprite2D" parent="." unique_id=1801706799]
light_mask = 2
position = Vector2(83, 265)
texture = ExtResource("5_0i02g")

[node name="Bed" type="StaticBody2D" parent="." unique_id=1247467104]
position = Vector2(400, 528)

[node name="Top" type="Sprite2D" parent="Bed" unique_id=1322899094]
position = Vector2(0, -79)
scale = Vector2(1.3, 1.3)
texture = ExtResource("7_158eg")

[node name="Bottom" type="Sprite2D" parent="Bed" unique_id=225264219]
z_index = 2
scale = Vector2(1.3, 1.3)
texture = ExtResource("6_wid0f")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bed" unique_id=476976624]
position = Vector2(0, 84.5)
scale = Vector2(1.3, 1.3)
shape = SubResource("RectangleShape2D_acpa7")

[node name="LightOccluder2D" type="LightOccluder2D" parent="Bed" unique_id=1913911664]
occluder = SubResource("OccluderPolygon2D_0i02g")

[node name="Player" parent="." unique_id=182207576 instance=ExtResource("9_t7mnq")]
position = Vector2(235, 441)

[node name="Pause" parent="." unique_id=726105523 instance=ExtResource("11_t7mnq")]

[node name="HUD" type="CanvasLayer" parent="." unique_id=673780350]
follow_viewport_enabled = true

[node name="PauseButton" type="TouchScreenButton" parent="HUD" unique_id=1834015992]
light_mask = 2
position = Vector2(370, 129)
scale = Vector2(0.2, 0.5)
texture_normal = ExtResource("12_ltqu5")
texture_pressed = ExtResource("13_ew6p8")
visibility_mode = 1

[node name="ScoreLabel" type="Label" parent="HUD" unique_id=1893388159]
offset_left = 4.0
offset_top = 199.0
offset_right = 155.0
offset_bottom = 216.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("11_wid0f")
theme_override_font_sizes/font_size = 12
text = "Score: %d"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DayLabel" type="Label" parent="HUD" unique_id=2091781943]
offset_left = 162.0
offset_top = 49.0
offset_right = 307.0
offset_bottom = 66.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("11_wid0f")
theme_override_font_sizes/font_size = 12
text = "Day: %d"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RoomSounds" parent="." unique_id=1429063875 instance=ExtResource("14_acpa7")]

[node name="SleepTimer" type="Timer" parent="." unique_id=1553324031]
wait_time = 2.0
one_shot = true

[connection signal="pressed" from="HUD/PauseButton" to="." method="_on_pause_button_pressed"]
[connection signal="timeout" from="SleepTimer" to="." method="_on_sleep_timer_timeout"]
